# wakil

./: .env.docker.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: README.MD  lint.yml  release.yml
backend/: .env.example  poetry.toml  pyproject.toml
backend/notebooks/: building agent composer.ipynb
backend/src/: main.py
backend/src/api/: crud.py  models.py  views.py  websocket.py
backend/src/api/connections/: router.py
backend/src/api/stripe/: crud.py  models.py  router.py
backend/src/cloud/: router.py  utils.py
backend/src/core/: constants.py  settings.py
backend/src/core/agents/: AsyncMongoDBSaver.py  actions.py  chat_expert.py  connections.py  graph.py  models.py  nodes.py  outline.py  state.py  utils.py  webhook.py
backend/src/db/: client.py  qdrant.py  utils.py
backend/src/security/: hashing.py  jwttoken.py  oauth.py  router.py
backend/src/services/: email_constants.py  emails.py
backend/tests/: README.MD  test_api.py  test_core.py
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: middleware.ts  stripe.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/: captcha.tsx  formWithReCAPTCHA.tsx
frontend/src/components/charts/: home-chart.tsx
frontend/src/components/forms/: modify-password.tsx
frontend/src/components/sidebar/: sidebar-button.tsx  sidebar-desktop.tsx  sidebar-mobile.tsx  sidebar.tsx
frontend/src/components/ui/: PublishConfirmationDialog.tsx  alert-dashboard.tsx  animated-tooltip.tsx  compare.tsx  container-scroll-animation.tsx  glare-card.tsx  infinite-moving-cards.tsx  lamp.tsx  navbar-menu.tsx  pricing-cards.tsx  shooting-stars.tsx  small-spinner.tsx  (+4 more)
frontend/src/lib/: constants.ts  localStorage.ts  types.ts
frontend/src/providers/: agent-provider.tsx
(+47 files in other folders)
